# brownie

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  deploy.sh  docker-build.sh  koyeb.yml  run-docker.sh  tsconfig.json  util.sh  watch-sass.sh  watch-ts.sh  watch.sh
migrations/: 20220711121424_create-users-table.sql  20220711121447_create-links-table.sql  links.sql  users-dupm.sql
public/: index.html
public/scripts/src/: try-now.ts
public/stylesheets/: index.css  index.css.map  index.scss
public/stylesheets/components/: _loaders.scss
public/stylesheets/globals/: _classes.scss  _colors.scss  _mixin.scss
public/stylesheets/pages/: _login.scss
public/stylesheets/partials/: _footer.scss  _header.scss  _main.scss
sandbox/: database.rs  favicon.txt
src/: main.rs
src/models/: link.rs  mod.rs  users.rs
src/routes/: api.rs  auth.rs  errors.rs  mod.rs  users.rs  views.rs
templates/: index.html.hbs  index.html.tera  login.html.hbs
templates/assets/: index.css
templates/auth/: login.html.hbs
